[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["justchillinghere <41962623+justchillinghere@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

